Test: update strong to bold

--- a/app/views/ideas/show.html.erb
+++ b/app/views/ideas/show.html.erb
@@ -11,7 +11,7 @@
 </p>
 
 <p>
-  <strong>Picture:</strong>
+  <b>Picture:</b>
   <%= image_tag(@idea.picture_url, width: 600) if @idea.picture.present? %>
 </p>
 
